Version 0.30.0

- An .obj file loader was added.
- 2 new examples showing the usage of the .obj loader were added.
- Added several new simple .obj models used by the examples.
- The build system was updated:
  - Updated example dependencies/requirements.
  - Added instructions for building .obj models.
  - Updated and fixed some problems in documentation building.
- Problem with scoped enums emulation in uniform_typecheck.hpp was fixed.
- A wrapper for glTextureView was added to Texture.
- A wrapper for glGetShaderPrecisionFormat was added to Shader.
- The Size function was added to Buffer and Bound<Buffer>.
- A problem with generating of the bound/*.hpp was fixed.

Version 0.29.0

- The build system was updated and several problems were fixed:
  - A check if a standard threads implementation is available was added.
  - The management of example and test case dependencies and
    requirements was reimplemented.
  - Available GL version detection was added and the detection of GL
    extensions was updated.
  - A problem with standalone examples depending on libPNG was fixed,
    they are now built only if libPNG is available.
  - Some problems in the configure.py script were fixed and new features
    were added.
- The test suite for oglplus was moved to test/oglplus/.
- A test case checking if all configured examples build properly was added.
- The AtomicCounterBindingPoint and ShaderStorageBufferBindingPoint
  types were added.
- The BindBaseAtomicCounter and BindBaseShaderStorage functions were
  added to Buffer.
- The preprocessor symbols related to compiler capabilities were
  moved into a separate header file.
- Header dependencies were updated in several files.
- Several new examples showing the usage with GL 3.0 and GLSL 1.2
  (working with Mesa 3D 9.0) were added.
- Some of the existing examples were updated.

Version 0.28.0

- The VertexAttribute setup functions were reimplemented.
- The Vector and Matrix template classes were reimplemented